--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm ci
 
       - name: Building project
-        run: npm run build
+        run: CI=false npm run build
 
       - name: Running tests
         run: npm run test
