Disable default useless tests

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Building project
         run: CI=false npm run build
 
-      - name: Running tests
-        run: npm run test
+      # - name: Running tests
+      #   run: npm run test
 
       - name: Uploading production-ready build files
         uses: actions/upload-artifact@v2
