--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,7 +40,6 @@
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
-    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.6"
   }
 }
