--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "บันทึกกรธ.60 - รัฐสภา",
+  "short_name": "บันทึกกรธ.60",
   "name": "บันทึกการประชุมคณะกรรมการร่างรัฐธรรมนูญ 2560",
   "icons": [
     {
