--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": ".",
   "version": "1.0.0",
   "private": true,
+  "serviceWorker": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
